* Improved Permissions check and translation * Fix sum of big numbers * Fix validation command with long expressions